--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "description": "",
   "bin": "dist/index.js",
   "scripts": {
-    "build": "babel src -d dist && chmod +x dist/index.js",
+    "build": "babel src -d dist && chmod +x dist/*.js",
     "test": "jest",
     "lint": "eslint ."
   },
   "dependencies": {
-    "commander": "^2.20.0",
+    "change-case": "^3.1.0",
+    "commander": "^3.0.1",
     "winston": "^3.2.1"
   },
   "devDependencies": {
